==================== 2.19.92 ====================

2007-09-03  Simos Xenitellis  <simos@gnome.org>

	* window-list/el/el.po: Added Greek translation by Dimitrios Typaldos.
	* workspace-switcher/el/el.po: Added Greek translation by 
	Dimitrios Typaldos.
	* fish/el/el.po: Added Greek translation by Dimitrios Typaldos.
	* clock/el/el.po: Added Greek translation by Dimitrios Typaldos.

2007-09-03  Luca Ferretti  <elle.uca@libero.it>

	* window-list/it/it.po: Updated Italian translation.
	* window-list/it/figures/*: Removed obsolete figures.
	* workspace-switcher/it/it.po: Updated Italian translation.
	* workspace-switcher/it/figures/*: Removed obsolete figures.

==================== 2.19.6 ====================

2007-07-17  Claude Paroz  <claude@2xlibre.net>

	* window-list/fr/fr.po: Updated French translation.
	* window-list/fr/figures/*: Removed obsolete figures.
	* workspace-switcher/fr/fr.po: Updated French translation.
	* workspace-switcher/fr/figures/*: Removed obsolete figures.

2007-07-13 Jordi Mas <jmas@softcatala.org>

	* window-list/ca/ca.po: Catalan translation by Joan Duran
	* window-list/Makefile.am: Added Catalan language
	* workspace-switcher/ca/ca.po: Catalan translation by Joan Duran
	* workspace-switcher/Makefile.am: Added Catalan language
	* fish/ca/ca.po: Catalan translation by Joan Duran
	* fish/Makefile.am: Added Catalan language
	* clock/ca/ca.po: Catalan translation by Joan Duran
	* clock/ca/figures/clock_applet.png: Image
	* clock/Makefile.am: Added Catalan language 

==================== 2.19.5 ====================

==================== 2.19.4 ====================

==================== 2.19.3 ====================

2007-05-27  Daniel Nylander <po@danielnylander.se>

        * window-list/sv/sv.po: Updated Swedish translation
        * workspace-switcher/sv/sv.po: Updated Swedish translation

2007-05-22  Jorge Gonzalez <jorgegonz@svn.gnome.org>

        * window-list/es/es.po: Updated Spanish translation