@@ -4,4 +4,4 @@ dist-hook: doc-dist-hook
 DOC_MODULE = clock
 DOC_INCLUDES = legal.xml
 
-DOC_LINGUAS = ca de es fr it ja ko nl oc pa ru sr sv uk zh_CN zh_TW
+DOC_LINGUAS = ca de el es fr it ja ko nl oc pa ru sr sv uk zh_CN zh_TW
