@@ -1,3 +1,10 @@
+2007-09-05  Simos Xenitellis  <simos@gnome.org>
+
+	* window-list/Makefile.am: Added el for Greek in DOC_LINGUAS.
+	* workspace-switcher/Makefile.am: Added el for Greek in DOC_LINGUAS.
+	* fish/Makefile.am: Added el for Greek in DOC_LINGUAS.
+	* clock/Makefile.am: Added el for Greek in DOC_LINGUAS.
+
 ==================== 2.19.92 ====================
 
 2007-09-03  Simos Xenitellis  <simos@gnome.org>
